force-app/main/default/objects/Long_Term_Memory__c/Long_Term_Memory__c.object-meta.xml
<CustomObject>
    <description>Stores long-term memory records for Agentforce agents. Each record is a curated, scoped, auditable memory — semantic, episodic, or procedural — retrieved and persisted across agent sessions.</description>
    <label>Long Term Memory</label>
    <nameField>
        <label>Memory Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Long Term Memories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>