force-app/main/default/objects/Long_Term_Memory__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>Confidence Score</label>
    <description>Trust level assigned at write time by the deterministic validation gate. Range 0 to 1.</description>
    <inlineHelpText>Higher values indicate the memory passed stronger validation checks. Used as a ranking signal during retrieval.</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>3</scale>
</CustomField>