force-app/main/default/objects/Long_Term_Memory__c/fields/Conflict_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Group_Id__c</fullName>
    <label>Conflict Group Id</label>
    <description>Groups memories that are contradictory with each other for conflict resolution during retrieval.</description>
    <inlineHelpText>Memories sharing a Conflict Group Id are competing candidates. Retrieval picks the highest-ranked active member and flags the conflict.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>