force-app/main/default/objects/Long_Term_Memory__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <label>Effective From</label>
    <description>Start of the validity window. The memory is not retrievable before this datetime.</description>
    <inlineHelpText>Set to the datetime the memory was written. Retrieval filters exclude memories where Effective From is in the future.</inlineHelpText>
    <type>DateTime</type>
</CustomField>