force-app/main/default/objects/Long_Term_Memory__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <label>Effective To</label>
    <description>End of the validity window. The memory expires and becomes non-retrievable after this datetime.</description>
    <inlineHelpText>Defaults to one year from creation. After this date the memory is treated as expired by retrieval queries.</inlineHelpText>
    <type>DateTime</type>
</CustomField>