force-app/main/default/objects/Long_Term_Memory__c/fields/Importance_Score__c.field-meta.xml
<CustomField>
    <fullName>Importance_Score__c</fullName>
    <label>Importance Score</label>
    <description>Business importance of the memory used as a ranking signal. Range 0 to 1.</description>
    <inlineHelpText>Inferred from memory type and content at write time. Procedural and constraint memories typically score higher.</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>3</scale>
</CustomField>