force-app/main/default/objects/Long_Term_Memory__c/fields/Memory_Text__c.field-meta.xml
<CustomField>
    <fullName>Memory_Text__c</fullName>
    <label>Memory Text</label>
    <description>The human-readable memory statement stored for agent use.</description>
    <inlineHelpText>The full durable memory content. Should be a concise, complete sentence that is useful out of context.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>