force-app/main/default/objects/Long_Term_Memory__c/fields/Memory_Type__c.field-meta.xml
<CustomField>
    <fullName>Memory_Type__c</fullName>
    <label>Memory Type</label>
    <description>Classification of the memory content: durable fact, past event summary, or preferred way of working.</description>
    <inlineHelpText>Semantic = durable fact or preference. Episodic = summary of a past interaction. Procedural = remembered working method or output preference.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Semantic</fullName><default>true</default><label>Semantic</label></value>
            <value><fullName>Episodic</fullName><default>false</default><label>Episodic</label></value>
            <value><fullName>Procedural</fullName><default>false</default><label>Procedural</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>