force-app/main/default/objects/Long_Term_Memory__c/fields/Org_Key__c.field-meta.xml
<CustomField>
    <fullName>Org_Key__c</fullName>
    <label>Org Key</label>
    <description>Tenant boundary key used to isolate memories across orgs or environments.</description>
    <inlineHelpText>Set to your org identifier, e.g. org_demo. Used as the primary tenancy filter on all queries.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>