force-app/main/default/objects/Long_Term_Memory__c/fields/Recency_Score__c.field-meta.xml
<CustomField>
    <fullName>Recency_Score__c</fullName>
    <label>Recency Score</label>
    <description>Freshness signal used in ranking. Starts at 1.0 at write time and decays over time. Range 0 to 1.</description>
    <inlineHelpText>More recently written or accessed memories rank higher. Updated when a duplicate is refreshed.</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>3</scale>
</CustomField>