force-app/main/default/objects/Long_Term_Memory__c/fields/Retrieval_Summary__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Summary__c</fullName>
    <label>Retrieval Summary</label>
    <description>Short prompt-injection-optimised summary of the memory, capped at 180 characters.</description>
    <inlineHelpText>Used for prompt injection and lexical matching. Truncated version of Memory Text suitable for direct inclusion in agent context.</inlineHelpText>
    <type>TextArea</type>
</CustomField>