force-app/main/default/objects/Long_Term_Memory__c/fields/Scope_Key__c.field-meta.xml
<CustomField>
    <fullName>Scope_Key__c</fullName>
    <label>Scope Key</label>
    <description>Concrete instance key within the scope, e.g. the user id or account id.</description>
    <inlineHelpText>Paired with Scope Type to uniquely bound retrieval. For personal scope this is typically the same as Unified Subject Id.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>