force-app/main/default/objects/Long_Term_Memory__c/fields/Source_Reference__c.field-meta.xml
<CustomField>
    <fullName>Source_Reference__c</fullName>
    <label>Source Reference</label>
    <description>Human-readable lineage reference for audit and debugging, e.g. agentforce:msg_001.</description>
    <inlineHelpText>Format: sourceSystem:sourceRecordId. Used for audit tracing and explainability.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>