force-app/main/default/objects/Long_Term_Memory__c/fields/Staleness_Score__c.field-meta.xml
<CustomField>
    <fullName>Staleness_Score__c</fullName>
    <label>Staleness Score</label>
    <description>Derived signal indicating likely decay in usefulness. Subtracts from the final rank score. Range 0 to 1.</description>
    <inlineHelpText>Higher values reduce ranking priority. Episodic memories accumulate staleness faster than semantic ones.</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>3</scale>
</CustomField>