force-app/main/default/objects/Long_Term_Memory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Lifecycle status of the memory record controlling whether it is retrievable.</description>
    <inlineHelpText>Active memories are returned by retrieval. Superseded, Expired, Deleted, and Suppressed records are excluded from retrieval results.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Superseded</fullName><default>false</default><label>Superseded</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Deleted</fullName><default>false</default><label>Deleted</label></value>
            <value><fullName>Suppressed</fullName><default>false</default><label>Suppressed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>