force-app/main/default/objects/Long_Term_Memory__c/fields/Structured_Payload__c.field-meta.xml
<CustomField>
    <fullName>Structured_Payload__c</fullName>
    <label>Structured Payload</label>
    <description>Optional JSON payload for machine-oriented memory metadata or suppression reason storage.</description>
    <inlineHelpText>Store additional structured data alongside the memory text, e.g. suppression reason JSON. Not directly injected into agent prompts.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>