force-app/main/default/objects/Long_Term_Memory__c/fields/Subject_Type__c.field-meta.xml
<CustomField>
    <fullName>Subject_Type__c</fullName>
    <label>Subject Type</label>
    <description>Classification of the memory subject entity.</description>
    <inlineHelpText>One of: user, account, territory, case, org, agent.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>user</fullName><default>true</default><label>user</label></value>
            <value><fullName>account</fullName><default>false</default><label>account</label></value>
            <value><fullName>territory</fullName><default>false</default><label>territory</label></value>
            <value><fullName>case</fullName><default>false</default><label>case</label></value>
            <value><fullName>org</fullName><default>false</default><label>org</label></value>
            <value><fullName>agent</fullName><default>false</default><label>agent</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>