force-app/main/default/objects/Long_Term_Memory__c/fields/Superseded_By_Memory_Id__c.field-meta.xml
<CustomField>
    <fullName>Superseded_By_Memory_Id__c</fullName>
    <label>Superseded By Memory Id</label>
    <description>Name field value (Memory Key) of the newer memory record that replaced this one.</description>
    <inlineHelpText>Set when this memory is marked Superseded by a newer write. Allows forward traversal of the contradiction chain.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>