force-app/main/default/objects/Long_Term_Memory__c/fields/Supersedes_Memory_Id__c.field-meta.xml
<CustomField>
    <fullName>Supersedes_Memory_Id__c</fullName>
    <label>Supersedes Memory Id</label>
    <description>Name field value (Memory Key) of the prior memory record that this record replaced.</description>
    <inlineHelpText>Populated when the write path detects a conflicting active memory and marks it Superseded. Used to trace contradiction chains.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>