force-app/main/default/objects/Long_Term_Memory__c/fields/Use_Case_Key__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Key__c</fullName>
    <label>Use Case Key</label>
    <description>Workflow or use-case identifier that scopes memory retrieval to a specific agent capability.</description>
    <inlineHelpText>E.g. precall, territory_review, service. Retrieval filters to this key so agents only surface relevant memories.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>